src/index.css
/* ... */
[class^="sc2-"]:before,
[class*=" sc2-"]:before {
  font-family: "starcraft2-font" !important;
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.sc2-bronze:before {
  content: "\61";
}

.sc2-diamond:before {
  content: "\62";
}

.sc2-gold:before {
  content: "\63";
}

.sc2-grandmaster:before {
  content: "\64";
}

.sc2-master:before {
  content: "\65";
}

.sc2-platinum:before {
  content: "\66";
}

.sc2-protoss:before {
  content: "\67";
  color: #006600;
}

.sc2-random:before {
  content: "\68";
  color: #ff9900;
}

.sc2-sliver:before {
  content: "\69";
}

.sc2-terran:before {
  content: "\6a";
  color: blue;
}

.sc2-zerg:before {
  content: "\6b";
  color: #800000;
}

.collapsible {
  background-color: rgba(97, 137, 47, 0.7);
  color: white;
  cursor: pointer;
  padding: 9px;
  width: 90.1%;
  border: none;
  text-align: left;
  outline: none;
  font-family: 'Quicksand', sans-serif;
  font-weight: bold;
  font-size: 16px;
}

.collapsible:after {
  content: '\02795'; /* Unicode character for "plus" sign (+) */
  float: right;
  margin-left: 5px;
}

.collapsible-active:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
}

.collapsible-active, .collapsible:hover {
  background-color: rgba(97, 137, 47, 1);
}

.collapsible-content {
  padding: 0 30px;
  background-color: rgba(0,0,0,0.25);
  max-height: 0;
  width: 84.5%;
  overflow: hidden;
  transition: max-height 0.2s ease-out
}

.unselectable-input {
  background-color: #eee;
  cursor: not-allowed;
  color: #555;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: -moz-none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  outline: none;
}

input[type='checkbox'] {
  -webkit-appearance:none;
  width:30px;
  height:30px;
  background:white;
  border-radius:5px;
  border:2px solid #555;
}
input[type='checkbox']:checked {
  background: rgba(97, 137, 47, 1);
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0,0,0,.7);
}
.overlay__wrapper {
  width: 100%;
  height: 100%;
  position: relative;
}
.overlay__spinner {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 9999 !important;
}

